# div-django-users

./: .gitignore  MANIEST.in  README.md  setup.cfg
users/: admin.py  manager.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: base.html
users/templates/account/: login.html  signup.html  verification_sent.html
users/templates/users/: profile.html
