[metadata]
name = div-django-users
version = 0.1
description = A basic allauth user mode implementation
long_description = file: README.rst
url = https://divsel.neocities.org
author = divsel
license = MIT 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: allauth
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2.2
    django-allauth >= 0.54.0
